@@ -12,6 +12,7 @@ NEWS
   * [core] do not send SIGHUP to process group unless server.max-workers is used (fixes #2711)
   * [mod_cgi] edge case chdir "/" when docroot "/" (fixes #2460)
   * [mod_cgi] issue trace and exit if execve() fails (closes #2302)
+  * [configparser] don't continue after parse error (fixes #2717)
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
